# viewport-entropy-toolkit

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
docs/api/: api-reference.txt
docs/source/: conf.py  index.rst
docs/tutorials/: installation-doc.md  usage-examples.txt
docs/tutorials/sequence_diagrams/: data-processing-sequence.mermaid  entropy-calculation-detailed.mermaid  visualization-detailed.mermaid
src/viewport-entropy-toolkit/: __init__.py
src/viewport-entropy-toolkit/analyzers/: __init__.py  spatial-entropy.py
src/viewport-entropy-toolkit/utilities/: __init__.py  data-utils.py  entropy-utils.py
src/viewport_entropy_toolkit/: __init__.py  config.py  data_types.py
src/viewport_entropy_toolkit/analyzers/: __init__.py  naive_spatial_entropy.py  spatial_entropy.py  transition_entropy.py
src/viewport_entropy_toolkit/utilities/: __init__.py  data_utils.py  entropy_utils.py  visualization-utils.py  visualization_utils.py
tests/: test_core.py
