[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "viewport-entropy-toolkit"
version = "0.1.0"
description = "A toolkit for analyzing and visualizing spatial entropy in 360-degree video viewport trajectories"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dependencies = [
    "numpy>=1.20",
    "pandas>=1.3",
    "matplotlib>=3.4",
    "pyvista>=0.44.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=22.0",
    "isort>=5.0",
    "mypy>=0.9",
    "sphinx>=4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/viewport_entropy_toolkit"]

[tool.hatch.build]
include = [
    "src/viewport_entropy_toolkit/**/*.py",
    "src/viewport_entropy_toolkit/**/*.pyi",
]
